--- a/assets/css/imagestyle.css
+++ b/assets/css/imagestyle.css
@@ -5,19 +5,21 @@
 }
 
 .column {
-    flex: 100%;
-    max-width: 100%;
-    padding: 10px;
-}
+    flex: 50%;
+    max-width: 50%;
+    padding: 0px;
+} 
 
 .img-container {
     position: relative;
-    margin: 20px 5px;
+    margin: 20px
 }
 
 img.portfolio {
+    position: relative;
     width: 100%;
-    height: 200px;
+    height: 175px;
+    vertical-align: middle;
 }
 
 .text-block {
@@ -26,15 +28,14 @@ img.portfolio {
     bottom: 25px;
     background-color: #4aaaa5;
     color: #ffffff;
-    text-align: center;
-    
+    text-align: center;   
 }
+
 img.profile {
     width: 100%;
     float:left;
     padding: 10px;
 }
-
 
 .profile-container{
     width: 30%;
